processed/gerrit/txt/44484.txt
Change:     44484
Subject:    LU-14093 lutf: fix build with gcc10
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/44484
Change-Id:  Ie3c99f8c6cf2f5de583dc95a0dc63fcde1aa6ffd
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      James Simmons
Created:    2021-08-03 16:43:24.000000000
Updated:    2021-08-18 02:00:22.000000000
Patch Set:  7
Insertions: +13
Deletions:  -13
Comments:   0 (0 unresolved)

--- Labels ---
  Code-Review: Serguei Smirnov: +1; Amir Shehata: +1; Alex Zhuravlev: +1; Oleg Drokin: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Alex Zhuravlev, James Simmons, Amir Shehata, Charlie Olmstead, Serguei Smirnov, Cyril Bordage

--- Commit Message ---
LU-14093 lutf: fix build with gcc10

The new LUTF code has build issues with gcc10. I see the following
build errors.

ld: lutf-lutf_listener.o:lutf.h:88: multiple definition of `g_lutf_cfg'
ld: lutf-lutf_listener.o:lutf.h:22: multiple definition of `debugtimestr'
ld: lutf-lutf_listener.o:lutf.h:21: multiple definition of `di'
ld: lutf-lutf_listener.o:lutf.h:20: multiple definition of `debugnow'

In function ‘snprintf’,
    inlined from ‘python_run_interactive_shell’ at lutf_python.c:45:2:
stdio2.h:71:10: error: ‘%s’ directive argument is null [-Werror=format-truncation=]
   71 |   return __builtin___snprintf_chk (__s, __n, __USE_FORTIFY_LEVEL - 1,
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   72 |        __glibc_objsize (__s), __fmt,
      |        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   73 |        __va_arg_pack ());
      |        ~~~~~~~~~~~~~~~~~

This patch resolves these warnings. Without this patch LUTF will
not build on Ubuntu 20 LTS.

Test-Parameters: trivial
Change-Id: Ie3c99f8c6cf2f5de583dc95a0dc63fcde1aa6ffd
Signed-off-by: James Simmons <jsimmons@infradead.org>
Reviewed-on: https://review.whamcloud.com/44484
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Serguei Smirnov <ssmirnov@whamcloud.com>
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Reviewed-by: Amir Shehata <ashehata@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (James Simmons, 2021-08-03 16:43:24.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2021-08-03 16:46:52.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (James Simmons, 2021-08-03 17:38:55.000000000) ---
Patch Set 2: Commit message was updated.

--- Message (jenkins, 2021-08-03 17:39:03.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/82304/ : ABORTED

https://build.whamcloud.com/job/lustre-reviews-patchless/22205/ : FAILURE

--- Message (wc-checkpatch, 2021-08-03 17:42:06.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (jenkins, 2021-08-03 18:25:30.000000000) ---
Patch Set 2: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/82305/ : FAILURE

https://build.whamcloud.com/job/lustre-reviews-patchless/22206/ : FAILURE

--- Message (James Simmons, 2021-08-04 13:51:21.000000000) ---
Uploaded patch set 3.

--- Message (wc-checkpatch, 2021-08-04 13:56:21.000000000) ---
Patch Set 3:

Looks good to me.

--- Message (jenkins, 2021-08-04 14:27:54.000000000) ---
Patch Set 3: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/82316/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews-patchless/22217/ : SUCCESS

--- Message (James Simmons, 2021-08-05 13:08:09.000000000) ---
Patch Set 3:

ping

--- Message (Serguei Smirnov, 2021-08-08 15:16:19.000000000) ---
Patch Set 3: Code-Review+1

--- Message (James Simmons, 2021-08-10 00:41:45.000000000) ---
Patch Set 3:

ping

--- Message (Amir Shehata, 2021-08-10 18:20:14.000000000) ---
Patch Set 3: Code-Review+1

--- Message (James Simmons, 2021-08-16 18:54:10.000000000) ---
Uploaded patch set 4.

--- Message (James Simmons, 2021-08-16 18:55:28.000000000) ---
Patch Set 4:

I rebased on master directly so we can land this to complete Ubuntu20 support.

--- Message (wc-checkpatch, 2021-08-16 18:57:22.000000000) ---
Patch Set 4:

Looks good to me.

--- Message (James Simmons, 2021-08-16 19:06:41.000000000) ---
Uploaded patch set 5: Patch Set 4 was rebased.

--- Message (jenkins, 2021-08-16 19:06:42.000000000) ---
Patch Set 4: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/22465/ : ABORTED

https://build.whamcloud.com/job/lustre-reviews/82546/ : ABORTED

--- Message (wc-checkpatch, 2021-08-16 19:07:33.000000000) ---
Patch Set 5:

Looks good to me.

--- Message (jenkins, 2021-08-16 19:46:41.000000000) ---
Patch Set 5: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/22466/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/82547/ : SUCCESS

--- Message (James Simmons, 2021-08-16 21:32:07.000000000) ---
Patch Set 6: Commit message was updated.

--- Message (wc-checkpatch, 2021-08-16 21:33:00.000000000) ---
Patch Set 6:

Looks good to me.

--- Message (Charlie Olmstead, 2021-08-16 21:59:09.000000000) ---
Patch Set 6:

I created https://jira.whamcloud.com/browse/ATM-2125 for the node provisioning issue with lnet sessions.

--- Message (jenkins, 2021-08-16 22:08:34.000000000) ---
Patch Set 6:

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/22467/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/82548/ : SUCCESS

--- Message (Autotest, 2021-08-16 22:09:42.000000000) ---
Patch Set 5:

Onyx Autotest is abandoning the following sessions because: later build 82548 found
- Enforced lnet-review-ldiskfs-dne on el8.3-x86_64/ldiskfs servers and clients

--- Message (Serguei Smirnov, 2021-08-17 15:25:04.000000000) ---
Patch Set 6: Code-Review+1

--- Message (Alex Zhuravlev, 2021-08-17 15:26:59.000000000) ---
Patch Set 6: Code-Review+1

--- Message (James Simmons, 2021-08-17 15:35:42.000000000) ---
Removed reviewer Andreas Dilger.

--- Message (Amir Shehata, 2021-08-17 20:26:08.000000000) ---
Patch Set 6: Code-Review+1

--- Message (Oleg Drokin, 2021-08-18 02:00:20.000000000) ---
Patch Set 6: Code-Review+2

--- Message (Oleg Drokin, 2021-08-18 02:00:22.000000000) ---
Change has been successfully cherry-picked as 5220160648140800ced6466a1f75071ca80162da by Oleg Drokin
